--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,158 +1,55 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Internova Systems</title>
-    <base href="/app/">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js"></script>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-
-  <body>
+    <head>
 
 
 
-    <style>
+      <meta charset="utf-8">
+        <title>Internova Systems</title>
+        <base href="/app/">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+        <link rel="stylesheet" href="../../public/stylesheets/main.css">
 
+      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js"></script>
+        <link rel="stylesheet" href="styles.css">
+    </head>
 
-  .log-a {
-    display: flex;
-    align-items: center;
-  }
-
-  .img-logo-index-html {
-    display: flex;
-    justify-content: center;
-    height: 100vh;
-  }
-
-  .lds-circle {
-    display: inline-block;
-    transform: translateZ(1px);
-  }
-
-  .lds-circle > div {
-    display: inline-block;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border-radius: 50%;
-    background: #740c09;
-    animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-  }
-
-  .lds-roller {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-  }
-  .lds-roller div {
-    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    transform-origin: 40px 40px;
-  }
-  .lds-roller div:after {
-    content: " ";
-    display: block;
-    position: absolute;
-    width: 7px;
-    height: 7px;
-    border-radius: 50%;
-    background: #740c09;
-    margin: -4px 0 0 -4px;
-  }
-  .lds-roller div:nth-child(1) {
-    animation-delay: -0.036s;
-  }
-  .lds-roller div:nth-child(1):after {
-    top: 63px;
-    left: 63px;
-  }
-  .lds-roller div:nth-child(2) {
-    animation-delay: -0.072s;
-  }
-  .lds-roller div:nth-child(2):after {
-    top: 68px;
-    left: 56px;
-  }
-  .lds-roller div:nth-child(3) {
-    animation-delay: -0.108s;
-  }
-  .lds-roller div:nth-child(3):after {
-    top: 71px;
-    left: 48px;
-  }
-  .lds-roller div:nth-child(4) {
-    animation-delay: -0.144s;
-  }
-  .lds-roller div:nth-child(4):after {
-    top: 72px;
-    left: 40px;
-  }
-  .lds-roller div:nth-child(5) {
-    animation-delay: -0.18s;
-  }
-  .lds-roller div:nth-child(5):after {
-    top: 71px;
-    left: 32px;
-  }
-  .lds-roller div:nth-child(6) {
-    animation-delay: -0.216s;
-  }
-  .lds-roller div:nth-child(6):after {
-    top: 68px;
-    left: 24px;
-  }
-  .lds-roller div:nth-child(7) {
-    animation-delay: -0.252s;
-  }
-  .lds-roller div:nth-child(7):after {
-    top: 63px;
-    left: 17px;
-  }
-  .lds-roller div:nth-child(8) {
-    animation-delay: -0.288s;
-  }
-  .lds-roller div:nth-child(8):after {
-    top: 56px;
-    left: 12px;
-  }
+    <body>
 
 
 
+        <app-root></app-root>
 
-
-</style>
-
-
-    <app-root></app-root>
-
-    <div class="mx-auto mb-5 img-logo-index-html">
-      <a class="log-a">
-        <div class="row" style="margin: 0">
-          <div class="col-md-12" style="text-align: center">
-            <img src="C:/uploads/internova_logo.png" alt=""/>
-          </div>
-          <div class="col-md-12" style="text-align: center">
-            <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-          </div>
+        <div class="mx-auto mb-5 img-logo-index-html">
+            <a class="log-a">
+                <div class="row" style="margin: 0">
+                    <div class="col-md-12" style="text-align: center">
+                        <img src="C:/uploads/internova_logo.png" alt=""/>
+                    </div>
+                    <div class="col-md-12" style="text-align: center">
+                        <div class="lds-roller"><div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div></div>
+                    </div>
+                </div>
+            </a>
         </div>
-      </a>
-    </div>
 
 
-
-
-    <script src="runtime-es2015.js" type="module"></script>
-    <script src="runtime-es5.js" nomodule defer></script>
-    <script src="polyfills-es5.js" nomodule defer></script>
-    <script src="polyfills-es2015.js" type="module"></script>
-    <script src="scripts.js" defer></script>
-    <script src="main-es2015.js" type="module"></script>
-    <script src="main-es5.js" nomodule defer></script>
-  </body>
+        <script src="runtime-es2015.js" type="module"></script>
+        <script src="runtime-es5.js" nomodule defer></script>
+        <script src="polyfills-es5.js" nomodule defer></script>
+        <script src="polyfills-es2015.js" type="module"></script>
+        <script src="scripts.js" defer></script>
+        <script src="main-es2015.js" type="module"></script>
+        <script src="main-es5.js" nomodule defer></script>
+    </body>
 </html>
