customers suppliers cities trucks typesv6

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,9 +9,7 @@
         <base href="/app/">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
-        <link rel="stylesheet" href="../../public/stylesheets/main.css">
-
-      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js"></script>
         <link rel="stylesheet" href="styles.css">
@@ -27,7 +25,7 @@
             <a class="log-a">
                 <div class="row" style="margin: 0">
                     <div class="col-md-12" style="text-align: center">
-                        <img src="C:/uploads/internova_logo.png" alt=""/>
+                        <img src="assets/images/internova_logo.png" alt=""/>
                     </div>
                     <div class="col-md-12" style="text-align: center">
                         <div class="lds-roller"><div></div>
