--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByKEAFNd0Y6uPj5JDis-6VmGBCu6QlNQY&libraries=places&language=el"></script>
         <link rel="stylesheet" href="styles.css">
     </head>
 
