--- a/app/reports/jasper/anathesh/items_type_point.jrxml
+++ b/app/reports/jasper/anathesh/items_type_point.jrxml
@@ -9,7 +9,7 @@
 (select distinct p.type
 from  orders_selections_by_point osbp 
 join package_type p on (p.id=osbp.package_type_id)
-where osbp.order_schedule_id= $P{id}  and osbp.order_waypoint_id is null) as typegroup ]]>
+where osbp.order_schedule_id= $P{id}  and osbp.order_waypoint_id is null) as typegroup]]>
 	</queryString>
 	<field name="type" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="type"/>
@@ -27,7 +27,7 @@ where osbp.order_schedule_id= $P{id}  and osbp.order_waypoint_id is null) as typ
 				<textElement verticalAlignment="Middle">
 					<font fontName="ArialPdf"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{type}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{type}!=null && $F{type}!="null"?$F{type}:"-"]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
