--- a/app/reports/jasper/anathesh_eng/orders.jrxml
+++ b/app/reports/jasper/anathesh_eng/orders.jrxml
@@ -11,7 +11,9 @@
 		<![CDATA[select * from 
 				(
 				select 
-				'Φόρτωση' as point_type,
+				'Loading' as point_type,
+				'Loading' as point_type2,
+				'Loading place' as point_type3,
 				os.id,
 				os.order_id,
 				os.position,
@@ -23,6 +25,8 @@
 				ord.truck_temprature,
 				ord.gross_weight,
 				f.address,
+				f.appointment_required,
+				f.postal_code,
 				f.brand_name  as 'factory_name',
 				concat(f.lattitude,',',f.longtitude) coordinates,
 				cs.brand_name  as 'customer_name'
@@ -35,7 +39,9 @@
 				union
 				
 				select 
-				IF(ow.offer_schedule_between_waypoint_id is null, 'Εκφόρτωση','Φόρτωση/Εκφόρτωση') as point_type,
+				IF(ow.offer_schedule_between_waypoint_id is null, 'Unloading','Loading/Unloading') as point_type,
+				IF(ow.offer_schedule_between_waypoint_id is null, 'unloading','loading/unloading') as point_type2,
+				IF(ow.offer_schedule_between_waypoint_id is null, 'Unloading place','Loading/Unloading place') as point_type3,
 				ow.id,
 				ow.order_id,
 				ow.position,
@@ -47,6 +53,8 @@
 				ord.truck_temprature,
 				ord.gross_weight,
 				f.address,
+				f.appointment_required,                
+				f.postal_code,
 				f.brand_name 'factory_name',
 				concat(f.lattitude,',',f.longtitude) coordinates,
 				cs.brand_name as 'customer_name'
@@ -73,6 +81,14 @@
 	<field name="point_type" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="point_type"/>
 		<property name="com.jaspersoft.studio.field.label" value="point_type"/>
+	</field>
+	<field name="point_type2" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.name" value="point_type2"/>
+		<property name="com.jaspersoft.studio.field.label" value="point_type2"/>
+	</field>
+	<field name="point_type3" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.name" value="point_type3"/>
+		<property name="com.jaspersoft.studio.field.label" value="point_type3"/>
 	</field>
 	<field name="id" class="java.lang.Long">
 		<property name="com.jaspersoft.studio.field.name" value="id"/>
@@ -128,6 +144,14 @@
 		<property name="com.jaspersoft.studio.field.name" value="address"/>
 		<property name="com.jaspersoft.studio.field.label" value="address"/>
 	</field>
+	<field name="appointment_required" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.name" value="appointment_required"/>
+		<property name="com.jaspersoft.studio.field.label" value="appointment_required"/>
+	</field>
+	<field name="postal_code" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.name" value="postal_code"/>
+		<property name="com.jaspersoft.studio.field.label" value="postal_code"/>
+	</field>
 	<field name="factory_name" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="factory_name"/>
 		<property name="com.jaspersoft.studio.field.label" value="factory_name"/>
@@ -144,11 +168,9 @@
 		<band splitType="Stretch"/>
 	</background>
 	<detail>
-		<band height="200" splitType="Stretch">
+		<band height="188" splitType="Stretch">
 			<frame>
-				<reportElement stretchType="ElementGroupHeight" x="0" y="0" width="554" height="200" uuid="ba4ebebc-d76f-4f73-b640-31d9091ed099">
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
-				</reportElement>
+				<reportElement stretchType="ElementGroupHeight" x="0" y="0" width="554" height="188" uuid="b6011189-0000-4948-80fa-2dd51b3236ed"/>
 				<box>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -156,26 +178,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="31" width="554" height="14" isPrintWhenDetailOverflows="true" uuid="d1110772-1b9f-40b1-ae10-5b06bfc8193d">
-						<property name="com.jaspersoft.studio.unit.height" value="px"/>
-					</reportElement>
-					<textElement>
-						<font fontName="ArialPdf"/>
-					</textElement>
-					<textFieldExpression><![CDATA["Brand Name: "+($F{factory_id}!=null?$F{factory_name}:"-")]]></textFieldExpression>
-				</textField>
-				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="60" width="554" height="14" isPrintWhenDetailOverflows="true" uuid="6f925040-09d2-4944-90e0-c8c552e19427">
-						<property name="com.jaspersoft.studio.unit.height" value="px"/>
-					</reportElement>
-					<textElement>
-						<font fontName="ArialPdf"/>
-					</textElement>
-					<textFieldExpression><![CDATA["Loading Date: "+
-($F{appointment_day_load}!=null?new SimpleDateFormat("dd/MM/yyyy").format($F{appointment_day_load}):"-")]]></textFieldExpression>
-				</textField>
-				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="74" width="554" height="14" isPrintWhenDetailOverflows="true" uuid="78f2239a-b3fe-4f5a-9e4d-2a60a71ee3d3">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="60" width="554" height="14" isPrintWhenDetailOverflows="true" uuid="e35274fe-77e9-4f32-afb8-75a93f180f53">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -187,7 +190,7 @@
 )]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ContainerBottom" x="0" y="45" width="554" height="15" uuid="6ec60ec7-214d-4004-945c-e82fba8c4c2d">
+					<reportElement stretchType="ContainerBottom" x="0" y="31" width="554" height="15" uuid="b28d17ed-1272-4b08-b9eb-76db5e47c7fd">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -196,18 +199,20 @@
 					<textFieldExpression><![CDATA["Coordinates: "+($F{coordinates}!=null?$F{coordinates}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="ScaleFont">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="16" width="554" height="15" isPrintWhenDetailOverflows="true" uuid="720e1a4c-533a-44dc-8906-e99d73e3c87a">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="16" width="554" height="15" isPrintWhenDetailOverflows="true" uuid="8f4fdec9-7215-46b1-bbd8-a099aca68d09">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
-						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Loading Place : "+($F{address}!=null?$F{address}:"-")]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{point_type3}
+
++": " + ($F{factory_id}!=null?$F{factory_name}+",":"")+  ($F{address}!=null?$F{address}:"")+(($F{postal_code}!=null && $F{postal_code}!="null")?(",")+$F{postal_code}:"-"  )]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="ScaleFont">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="148" width="554" height="14" isPrintWhenDetailOverflows="true" uuid="bbd9e3d0-31ee-4d04-a5cc-b76781d7c872">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="136" width="554" height="14" isPrintWhenDetailOverflows="true" uuid="e9e15fbd-9813-46e2-8b9d-8c3b45451303">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
+						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
@@ -218,8 +223,9 @@
 )]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="162" width="554" height="38" isPrintWhenDetailOverflows="true" uuid="514f66b7-b03a-4ede-8dd9-df5211309687">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="150" width="554" height="38" isPrintWhenDetailOverflows="true" uuid="db93b012-1b2f-40ba-a516-66fffcc865de">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
+						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
@@ -230,7 +236,7 @@
 )]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="88" width="554" height="14" isPrintWhenDetailOverflows="true" uuid="a10abdb4-58a8-459b-ab2e-4d8a3cd73a19">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="74" width="554" height="16" isPrintWhenDetailOverflows="true" uuid="b1ec1032-e145-43ed-8d0c-2504f23b4216">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -238,12 +244,13 @@
 					</textElement>
 					<textFieldExpression><![CDATA["Temprature: "+ 
 (
-	($F{truck_temprature}!=null && $F{truck_temprature}!="null")?$F{truck_temprature}:"-"
+	($F{truck_temprature}!=null && $F{truck_temprature}!="null")?$F{truck_temprature}+"°C":"-"
 )]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="132" width="554" height="16" isPrintWhenDetailOverflows="true" uuid="6d79815d-4a13-4ec3-878b-6cc49e7a6668">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="120" width="554" height="16" isPrintWhenDetailOverflows="true" uuid="6ab41d91-9f5a-40e8-93bc-a18e26c87a09">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
+						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
@@ -251,21 +258,21 @@
 					<textFieldExpression><![CDATA["Weight: "+ $F{gross_weight}]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="ScaleFont">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="1" width="554" height="15" isPrintWhenDetailOverflows="true" uuid="5bd16635-34e2-4707-8b80-8269a824a48a">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="1" width="554" height="15" isPrintWhenDetailOverflows="true" uuid="dde8e7a0-3d24-4322-9840-189d1363ba3e">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{point_type}.equalsIgnoreCase( "Φόρτωση" )?"Load":($F{point_type}.equalsIgnoreCase( "Φόρτωση/Εκφόρτωση" )?"Load/Unload":($F{point_type}.equalsIgnoreCase( "Εκφόρτωση" )?"Unload":""))]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{point_type}]]></textFieldExpression>
 				</textField>
 				<frame>
-					<reportElement x="0" y="102" width="554" height="15" uuid="46d914d6-f655-42f9-8980-3ee693ad4f09">
+					<reportElement x="0" y="90" width="554" height="15" uuid="0d700611-b05e-41d8-9252-1e7bfdb7240f">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<textField textAdjust="StretchHeight">
-						<reportElement stretchType="ElementGroupHeight" x="0" y="0" width="80" height="15" isPrintWhenDetailOverflows="true" uuid="1ac4e53e-4979-441c-9d55-8521f8cb7002">
+						<reportElement stretchType="ElementGroupHeight" x="0" y="0" width="80" height="15" isPrintWhenDetailOverflows="true" uuid="71d01618-e69b-43e9-8ba2-0295d5bd96e6">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<property name="com.jaspersoft.studio.unit.y" value="px"/>
 						</reportElement>
@@ -275,7 +282,7 @@
 						<textFieldExpression><![CDATA["Commodity: "]]></textFieldExpression>
 					</textField>
 					<subreport>
-						<reportElement x="60" y="0" width="494" height="15" uuid="e8fc0153-f2cd-49f7-82a2-ac32f85c5f82">
+						<reportElement x="60" y="0" width="494" height="15" uuid="73f5fb1f-7a90-427d-a278-296796ee1097">
 							<printWhenExpression><![CDATA[$F{point_type}.equalsIgnoreCase( "Φόρτωση" )]]></printWhenExpression>
 						</reportElement>
 						<subreportParameter name="SUBREPORT_DIR">
@@ -288,7 +295,7 @@
 						<subreportExpression><![CDATA[$P{SUBREPORT_DIR}+  "items_type_point.jasper"]]></subreportExpression>
 					</subreport>
 					<subreport>
-						<reportElement x="60" y="0" width="494" height="15" uuid="5a2da413-127d-4654-98fb-6fa7024a7eaa">
+						<reportElement x="60" y="0" width="494" height="15" uuid="7e920266-2ead-46eb-a11a-0ef8eeaf531c">
 							<printWhenExpression><![CDATA[!$F{point_type}.equalsIgnoreCase( "Φόρτωση" )]]></printWhenExpression>
 						</reportElement>
 						<subreportParameter name="SUBREPORT_DIR">
@@ -302,12 +309,12 @@
 					</subreport>
 				</frame>
 				<frame>
-					<reportElement x="0" y="117" width="554" height="15" uuid="d68347ce-932e-45da-907b-3cf56360f2eb">
+					<reportElement x="0" y="105" width="554" height="15" uuid="455dcf33-7ec2-4eef-bef4-228487fe2204">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<textField textAdjust="StretchHeight">
-						<reportElement stretchType="ElementGroupHeight" x="0" y="0" width="80" height="15" isPrintWhenDetailOverflows="true" uuid="929787a4-b08b-4a36-acd6-cd514fc81a53">
+						<reportElement stretchType="ElementGroupHeight" x="0" y="0" width="80" height="15" isPrintWhenDetailOverflows="true" uuid="4137901d-e7e3-411c-a3ea-d51f310f364c">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<property name="com.jaspersoft.studio.unit.y" value="px"/>
 						</reportElement>
@@ -317,7 +324,7 @@
 						<textFieldExpression><![CDATA["Quantity: "]]></textFieldExpression>
 					</textField>
 					<subreport>
-						<reportElement x="60" y="0" width="494" height="15" uuid="297a78a4-60be-49a2-9890-cfb7e6c80523">
+						<reportElement x="60" y="0" width="494" height="15" uuid="241200ea-6b5a-4c6b-926a-76b5a079acc0">
 							<printWhenExpression><![CDATA[$F{point_type}.equalsIgnoreCase( "Φόρτωση" )]]></printWhenExpression>
 						</reportElement>
 						<subreportParameter name="SUBREPORT_DIR">
@@ -330,7 +337,7 @@
 						<subreportExpression><![CDATA[$P{SUBREPORT_DIR}+  "items_quantity_point.jasper"]]></subreportExpression>
 					</subreport>
 					<subreport>
-						<reportElement x="60" y="0" width="494" height="15" uuid="73e726e8-ac3a-4da9-b16c-b710f013d3b6">
+						<reportElement x="60" y="0" width="494" height="15" uuid="f61040b1-07bc-4d28-833e-dd57461c869a">
 							<printWhenExpression><![CDATA[!$F{point_type}.equalsIgnoreCase( "Φόρτωση" )]]></printWhenExpression>
 						</reportElement>
 						<subreportParameter name="SUBREPORT_DIR">
@@ -343,6 +350,40 @@
 						<subreportExpression><![CDATA[$P{SUBREPORT_DIR}+  "items_quantity_waypoint.jasper"]]></subreportExpression>
 					</subreport>
 				</frame>
+				<textField textAdjust="StretchHeight">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="46" width="554" height="14" isPrintWhenDetailOverflows="true" uuid="6a5a1843-08ce-4dac-84ed-7d7d5502f3dd">
+						<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					</reportElement>
+					<textElement>
+						<font fontName="ArialPdf"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{point_type}+"Date: "+(
+	$F{appointment_required}!=null && $F{appointment_required}==1?
+(
+	
+	$F{appointment_day_load}!=null?(
+	
+	
+	
+	new SimpleDateFormat("dd/MM/yyyy HH:mm:ss").format($F{appointment_day_load})
+	
+	
+)+" ( With appointment )":"-"
+	
+	
+):
+(
+	$F{appointment_day_load}!=null?(
+	
+	
+	
+	new SimpleDateFormat("dd/MM/yyyy").format($F{appointment_day_load})
+	
+	
+):"-"
+)
+)]]></textFieldExpression>
+				</textField>
 			</frame>
 		</band>
 	</detail>
