--- a/app/reports/jasper/anathesh_eng/orders.jrxml
+++ b/app/reports/jasper/anathesh_eng/orders.jrxml
@@ -184,7 +184,7 @@
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Loading Ref: "+
+					<textFieldExpression><![CDATA[$F{point_type}+" Ref: "+
 (
 	($F{truck_loading_code}!=null &&$F{truck_loading_code}!="null")?$F{truck_loading_code}:"-"
 )]]></textFieldExpression>
@@ -357,7 +357,7 @@
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{point_type}+"Date: "+(
+					<textFieldExpression><![CDATA[$F{point_type}+" Date: "+(
 	$F{appointment_required}!=null && $F{appointment_required}==1?
 (
 	
